// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renderer: task-skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-exit 1`] = `[]`;

exports[`default renderer: task-skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-stderr 1`] = `[]`;

exports[`default renderer: task-skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[G",
  "✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute.
",
  "[?25h",
]
`;

exports[`default renderer: task-skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-exit 1`] = `[]`;

exports[`default renderer: task-skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-stderr 1`] = `[]`;

exports[`default renderer: task-skip should show the original title of the task when skipped with empty message: 3n2w67J8KnAihH5KaGDGnHe2O9xawvnx-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  "[2K[1A[2K[G",
  "↓ This task will execute. [SKIPPED]
",
  "[?25h",
]
`;

exports[`default renderer: task-skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-exit 1`] = `[]`;

exports[`default renderer: task-skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-stderr 1`] = `[]`;

exports[`default renderer: task-skip should show the original title of the task: c4Q9Hk2x725caX6F6qXGMgyUQh36HQls-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  "[2K[1A[2K[G",
  "↓ This task will execute. [SKIPPED]
",
  "[?25h",
]
`;

exports[`default renderer: task-skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-exit 1`] = `[]`;

exports[`default renderer: task-skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-stderr 1`] = `[]`;

exports[`default renderer: task-skip should skip without a suffix: omE6UjDQWFXPCa7F8rNE7ByEXsllnMAB-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G↓ This task will execute.
",
  "[2K[1A[2K[G↓ I am skipping this tasks for reasons.
",
  "[2K[1A[2K[G",
  "↓ I am skipping this tasks for reasons.
",
  "[?25h",
]
`;
